# tangram-es

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config.cmake.in  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  android_aar_build.sh  appveyor.yml  build.bat  build.sh  circle.yml  package-submodules.sh  proxy.py  release-checklist.md  scene.yaml  tangramNativeApp.cpp  thread_sanitizer.sup  todo  vcpkg.json
bench/: CMakeLists.txt  basic_test.cpp  builders.cpp  loading.cpp  run_bench.sh  test_tile_10_301_384.mvt
bench/src/: benchGeometryBuilder.cpp  benchStyleContext.cpp  benchTileBuilder.cpp  benchTileSource.cpp  builders.cpp  loading.cpp  mvtParsing.cpp  sceneLoading.cpp  template.cpp  tileLoading.cpp  uniform.cpp
core/: CMakeLists.txt  CMakeLists.txt.orig  platform.h  shaders.cmake  tangram.cpp  tangram.h  tangramNativeApp.cpp
core/api/: CMakeLists.txt  gl_choose.h  tangram-core-export.h  tangram-core.cpp  tangram-core.h  urlGet.h  urlGet_linux.cpp  urlGet_windows.cpp
core/api/windows/: mini_gzip.c  mini_gzip.h  miniz.c
core/common/: gl_choose.cpp  gl_choose.h  platform_gl.cpp  platform_gl.h
core/dataSource/: dataSource.cpp  dataSource.h
core/demo/: CMakeLists.txt  main.cpp
core/dependencies/: CMakeLists.txt
core/dependencies/benchmark/: CMakeLists.txt
core/dependencies/cssColorParser/: CMakeLists.txt  csscolorparser.cpp  csscolorparser.hpp
core/dependencies/jsoncpp/: Makefile
core/dependencies/lodepng/: CMakeLists.txt
core/dependencies/tess2/: CMakeLists.txt
core/djinni/: annotation_renderer.djinni
core/include/: stl.hpp  tesselator.h
core/include/core/: algorithm.hpp  any.hpp  array.hpp  functional.hpp  internal.hpp  iterator.hpp  memory.hpp  meta.hpp  numeric.hpp  optional.hpp  range.hpp  string.hpp  type_traits.hpp  utility.hpp  variant.hpp
core/include/flyweight/: cache.hpp  extractor.hpp  object.hpp
core/include/fontstash/: fontstash.h  glfontstash.h  sdf.h
core/include/hash-library/: README.md  md5.cpp
core/include/json/: CMakeLists.txt
core/include/jsoncpp/: jsoncpp.cpp
core/include/mapbox/: geojsonvt_custom_tags.hpp  variant.hpp
core/include/pbf/: pbf.hpp
core/include/rapidjson/: document.h
core/include/shaders/: ambientLight_glsl.h  cubemap_fs.h  cubemap_vs.h  debugPrimitive_fs.h  debugPrimitive_vs.h  debug_fs.h  debug_vs.h  directionalLight_glsl.h  lights_glsl.h  material_glsl.h  pointLight_glsl.h  point_fs.h  point_vs.h  polygon_fs.h  polygon_vs.h  polyline_fs.h  polyline_vs.h  rasters_glsl.h  sdf_fs.h  spotLight_glsl.h  text_fs.h
core/include/stb/: stb_easy_font.h  stb_image.h
core/include/tangram/: customRenderer.h  log.h  map.h  map.h.orig  onFrameListener.h  platform.h  sceneOptions.h  tangram.h
core/mapTile/: mapTile.cpp  mapTile.h
core/resources/: blueprint.yaml  config.yaml  crosshatch.yaml  cubemap.fs  cubemap.vs  debug.fs  directionalLight.glsl  directional_light.glsl  eraser.yaml  es2_blueprint.yaml  es2_crosshatch.yaml  es2_eraser.yaml  es2_gotham.yaml  es2_ikeda.yaml  es2_pericoli.yaml  es2_scene.yaml  globe.yaml  gotham.yaml  ikeda.yaml  lightFragment.glsl  lightVertex.glsl  lights.glsl  lights_frag.glsl  lights_vert.glsl  material.glsl  ofjvnrtwv.glsl  out.glsl  pericoli.yaml  point_light.glsl  polygon.fs  polygon.vs  polyline.fs  polyline.vs  scene.yaml  sdf.fs  spot_light.glsl  test.json  text.fs  text.vs  texture.fs
core/resources/modules/: directional_light.glsl  lights.glsl  material.glsl  point_light.glsl  spot_light.glsl
core/resources/scene/: config.yaml  scene.yaml
core/resources/shaders/: cubemap.vs  debug.fs  debug.vs  debugPrimitive.fs  debugPrimitive.vs  lights.glsl  material.glsl  point.fs  point.vs  polygon.fs  (+14 more)
core/sceneDefinition/: sceneDefinition.cpp  sceneDefinition.h
core/sceneDirector/: sceneDirector.cpp  sceneDirector.h
core/shaders/: ambientLight.glsl  cubemap.fs  cubemap.vs  debugPrimitive.fs  debugPrimitive.vs  debugTexture.fs  debugTexture.vs  fxaa.fs  fxaa.vs  grid.fs  grid.vs  material.glsl  point.fs  point.vs  polygon.vs  polyline.fs  polyline.vs  rasters.glsl  sdf.fs  selection.fs  text.fs  text.vs
core/src/: IJavaScriptContext.h  debug.h  gl.h  jsContext.h  log.h  map.cpp  map.cpp.orig  platform.cpp  platform.h  platform_gl.h  tangram.cpp  tangram.cpp.orig  tangram.h  tangram.h.orig  tangramNativeApp.cpp  types.h
core/style/: style.cpp  style.h
core/tileManager/: tileManager.cpp  tileManager.h
core/util/: error.h  geometry.cpp  geometry.h  geometryHandler.cpp  geometryHandler.h  jsonExtractor.cpp  jsonExtractor.h  projection.cpp  projection.h  shaderProgram.cpp  shaderProgram.h  tileID.h  vboMesh.cpp  vboMesh.h  vertexLayout.cpp  vertexLayout.h
core/viewModule/: viewModule.cpp  viewModule.h
paparazzi/: CMakeLists.txt  prime_server.cmake
paparazzi/src/: paparazzi.cpp  paparazzi.h  proxy.cpp  stb_image.cpp  worker.cpp
scenecompiler/: CMakeLists.txt  gl_mock.cpp  main.cpp  platform_mock.cpp
swig/: CMakeLists.txt  array_nocpy.i  basic_vector.i  jni_datasource.i  jni_debug.i  jni_geometry.i  jni_lnglat.i  properties.i  tangram.i  tangram_api.i  util_types.i
swig/examples/: demo.py  map.py
tests/: CMakeLists.txt
tests/src/: gl_mock.cpp  mockPlatform.cpp  mockPlatform.h  platform_mock.cpp  platform_mock.h
tests/unit/: approxVec.h  curlTests.cpp  drawRuleTests.cpp  dukTests.cpp  fileTests.cpp  filterTests.cpp  flyToTest.cpp  fontTests.cpp  geometryTests.cpp  intersectTests.cpp  jobQueueTests.cpp  labelTests.cpp  labelsTests.cpp  layerTests.cpp  lineWrapTests.cpp  lngLatTests.cpp  mapProjectionTests.cpp  mercProjTests.cpp  meshTests.cpp  networkDataSourceTests.cpp  sceneImportTests.cpp  sceneLoaderTests.cpp  sceneUpdateTests.cpp  stopsTests.cpp  styleMixTests.cpp  styleMixerTests.cpp  styleParamTests.cpp  styleSortingTests.cpp  styleUniformsTests.cpp  textBufferTests.cpp  textureTests.cpp  tileIDTests.cpp  tileManagerTests.cpp  urlTests.cpp  yamlFilterTests.cpp  yamlTests.cpp  yamlUtilTests.cpp
tools/scenecompiler/: CMakeLists.txt  main.cpp
(+818 files in other folders)
